Split out effects by type in list effects output

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -4747,6 +4747,39 @@ Desired example
         </tr>
         {{/combo}}
 
+        {{#buffs}}
+        <tr style="background:#FFFFFF; color:#000000;">
+            <td colspan="2">
+                <b>Buffs:</b><br/>
+                <ul>
+                    {{buffs}}
+                </ul>
+            </td>
+        </tr>
+        {{/buffs}}
+
+        {{#enchants}}
+        <tr style="background:#FFFFFF; color:#000000;">
+            <td colspan="2">
+                <b>Enchantments:</b><br/>
+                <ul>
+                    {{enchants}}
+                </ul>
+            </td>
+        </tr>
+        {{/enchants}}
+
+        {{#potions}}
+        <tr style="background:#FFFFFF; color:#000000;">
+            <td colspan="2">
+                <b>Potions:</b><br/>
+                <ul>
+                    {{potions}}
+                </ul>
+            </td>
+        </tr>
+        {{/potions}}
+
         {{#effects}}
         <tr style="background:#FFFFFF; color:#000000;">
             <td colspan="2">
