Reroll arbitrary stuff v2
Re-roll anything that's below average, which is a much simpler interface
for users, though not as flexible. We're secretly keeping support for
the pure text substitution kind of re-roll too, but the re-roll button
defaults to the below-average re-roll mechanism.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -161,7 +161,7 @@
                     <div class="sheet-row sheet-padb sheet-center">
                         <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Short_Rest" value="!barbs rest $@{character_name}$ short">Short Rest</button>
                         <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Long_Rest" value="!barbs rest $@{character_name}$ long">Long Rest</button>
-                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Reroll" value="!barbs reroll $@{character_name}$ ?{Roll name}|?{Roll results to replace}|?{Replacement roll}">Re-roll</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Reroll" value="!barbs reroll average $@{character_name}$ ?{Roll name}">Re-roll</button>
                     </div>
 
                     <h4 class="sheet-center">Level and Combat Experience</h4>
