Add Perpetual Runology
And make an area below classes to save Buffs/Effects that players create.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -1799,6 +1799,10 @@
                     </div>
                 </div>
             </div>
+
+            <hr/>
+            <h4 class="sheet-center">Extra Buff / Effect Creators</h4>
+            <textarea name="attr_extra_buff"></textarea>
         </div>
 
 
