Cleanup and reorganization

--- a/character_sheet/Barbs.html
+++ b/character_sheet/Barbs.html
@@ -4679,14 +4679,14 @@ Desired example
         {{/water}}
 
         {{#earth}}
-        <tr style="background:#B58A6E;">
+        <tr style="background:#b58a6e;">
             <td class="template_label">Earth:</td>
             <td class="template_value">{{earth}}</td>
         </tr>
         {{/earth}}
 
         {{#air}}
-        <tr style="background:#BAFFA5;">
+        <tr style="background:#baffa5;">
             <td class="template_label">Air:</td>
             <td class="template_value">{{air}}</td>
         </tr>
